[package]
name = "net-stalker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing-subscriber = { version = "0", features = [ "std", "env-filter" ] }
log = "0"
signal-hook = "0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0" }
axum = "0.6.20"
scraper = "0"
rss = { version = "2", features = ["builders", "atom"] }
sha2 = "0"
chrono = "0"
chrono-tz = "0"
